--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 style="text-align: center; margin-top: 50px;
-    font-size: 50px;">calculator</h1>
+    font-size: 50px;">Calculator</h1>
 
     <div id="calculator">
         
