--- a/index.html
+++ b/index.html
@@ -1,44 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>calulator</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <h1 style="text-align: center; margin-top: 50px; font-size: 50px">
-      Calculator
-    </h1>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simple Calculator</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>Calculator</h1>
 
     <div id="calculator">
-      <div id="display-field"><p id="result"></p></div>
-
-      <div id="keyboard">
-        <div id="digit-button">
-          <button class="digit">9</button>
-          <button class="digit">8</button>
-          <button class="digit">7</button>
-          <button class="digit">6</button>
-          <button class="digit">5</button>
-          <button class="digit">4</button>
-          <button class="digit">3</button>
-          <button class="digit">2</button>
-          <button class="digit">1</button>
-          <button class="digit">0</button>
+        <div id="display-field">
+            <p id="result"></p>
         </div>
 
-        <div id="operator-button">
-          <button class="operator">+</button>
-          <button class="operator">-</button>
-          <button class="operator">*</button>
-          <button class="operator">/</button>
-          <button id="equal">=</button>
-          <button id="clear">C</button>
+        <div id="keyboard">
+            <div id="digit-button">
+                <button class="digit">7</button>
+                <button class="digit">8</button>
+                <button class="digit">9</button>
+                <button class="digit">4</button>
+                <button class="digit">5</button>
+                <button class="digit">6</button>
+                <button class="digit">1</button>
+                <button class="digit">2</button>
+                <button class="digit">3</button>
+                <button class="digit">0</button>
+            </div>
+
+            <div id="operator-button">
+                <button class="operator">+</button>
+                <button class="operator">-</button>
+                <button class="operator">*</button>
+                <button class="operator">/</button>
+                <button id="equal">=</button>
+                <button id="clear">C</button>
+            </div>
         </div>
-      </div>
     </div>
 
     <script src="script.js"></script>
-  </body>
+</body>
 </html>
